# facial_emotions_detection

./: Facial Emotion Detection﻿.docx  README.md  facial_emotions_detection.ipynb  main.py  pyproject.toml
.github/workflows/: deploy.yml
Writerside/: in.tree  writerside.cfg
Writerside/topics/: Data-Description.md  Introduction.md  Reference.md  Related-Work.md  main.md
