[project]
name = "facial-emotions-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sklearn-genetic-opt>=0.11.1",
    "tensorflow>=2.19.0",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "ruff>=0.11.7",
]
